xml_struct_tests/ui/test_cases/type_properties/text_enum_with_namespaces.stderr
error: cannot declare namespaces for text content
 --> ui/test_cases/type_properties/text_enum_with_namespaces.rs:4:1
  |
4 | #[xml_struct(text, default_ns = "http://foo.example/")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot declare namespaces for text content
  --> ui/test_cases/type_properties/text_enum_with_namespaces.rs:13:1
   |
13 | #[xml_struct(default_ns = "http://foo.example/", text)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot declare namespaces for text content
  --> ui/test_cases/type_properties/text_enum_with_namespaces.rs:22:1
   |
22 | #[xml_struct(text, ns = ("foo", "http://foo.example/"))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot declare namespaces for text content
  --> ui/test_cases/type_properties/text_enum_with_namespaces.rs:31:1
   |
31 | #[xml_struct(ns = ("foo", "http://foo.example/"), text)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
